# bytepager

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: config.h.3B87A7252B596C45.idx  constants.h.CA3038504F78A869.idx  macros.h.3E76C61CA1931C9F.idx  main.c.06072769E1BEFA2E.idx  main.c.9915E160F79748DE.idx  page.c.25EA7BDBCC7EBF65.idx  page.h.C5A93C101B392C28.idx  scratchbuff.c.B3BF49268702AF12.idx  scratchbuff.h.E1244B08CD8A9213.idx
cmake/modules/: bytepager_deps.cmake  scratchbuff_deps.cmake
include/bytepager/: bytepager.h  config.h  constants.h  macros.h  page.h
include/scratchbuff/: config.h  constants.h  macros.h  page.h  scratchbuff.h
src/: bytepager.c  page.c  scratchbuff.c
test/: CMakeLists.txt
test/src/: main.c
